create cartsummary view

--- a/front-end/src/components/FullWidthButton/FullWidthButton.module.css
+++ b/front-end/src/components/FullWidthButton/FullWidthButton.module.css
@@ -8,3 +8,7 @@
   color: var(--color-white);
   background-color: var(--color-theme-main);
 }
+
+.black {
+  background-color: var(--color-text-default);
+}
