--- a/front-end/src/components/Breadcrumbs/Breadcrumbs.module.css
+++ b/front-end/src/components/Breadcrumbs/Breadcrumbs.module.css
@@ -1,25 +1,26 @@
 .breadcrumbs {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  gap: 0.5rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
 .breadcrumbs li a {
-  font-size: 0.75rem;
-  text-transform: uppercase;
+    font-size: 0.75rem;
+    text-transform: uppercase;
 }
 
 .breadcrumbs li a:global(.active) {
-  font-weight: bold;
+    font-weight: 700;
 }
 
-.breadcrumbs li img {
-  margin-left: 0.3rem;
+.breadcrumbs img {
+    transform: rotate(-90deg);
+    margin-left: 0.5rem;
 }
 
-.breadcrumbs li:last-child img {
-  display: none;
+.breadcrumbs li:last-of-type img {
+    display: none;
 }
