--- a/front-end/src/components/CartSummary/CartSummary.module.css
+++ b/front-end/src/components/CartSummary/CartSummary.module.css
@@ -1,33 +1,30 @@
 .cartSummary {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 28rem;
-  margin-right: 1rem;
-  margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    padding-right: 1rem;
+    margin-top: 1rem;
+    gap: 1rem;
+    width: 28rem;
 }
 
 .cartSummary h2 {
-  border-bottom: 1px solid var(--color-text-grey);
-  padding-bottom: 1rem;
+    border-bottom: 1px solid var(--color-text-grey);
+    padding-bottom: 1rem;
 }
 
 .cartRow {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .cartSummaryRow {
-  display: flex;
-  justify-content: space-between;
-  font-weight: 700;
+    font-weight: 700;
 }
 
 .deliveryInfo {
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: bold;
-  background-color: rgba(0, 0, 0, 0.15);
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    font-weight: 700;
+    background-color: var(--color-grey);
 }
