--- a/front-end/src/components/Hero/Hero.module.css
+++ b/front-end/src/components/Hero/Hero.module.css
@@ -1,16 +1,17 @@
 .hero {
-  width: 100%;
-  height: 500px;
-  background-size: cover;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
 }
 
 .contentWrapper {
-  margin-top: 5rem;
-  padding: 5rem 3rem;
-  display: inline-block;
-  background-color: rgba(0, 0, 0, 0.2);
+    margin-top: 5rem;
+    padding: 3rem 5rem;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .contentWrapper p {
-  margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
