--- a/front-end/src/components/Product/Product.module.css
+++ b/front-end/src/components/Product/Product.module.css
@@ -1,33 +1,34 @@
 .product {
-  position: relative;
+    position: relative;
 }
+
 .product img {
-  width: 280px;
-  height: 400px;
-  background-size: cover;
-  background-position: center;
+    width: 250px;
+    height: 400px;
 }
 
 .product h3 {
-  font-weight: bold;
-  margin: 0.5rem 0;
+    font-weight: 700;
+    margin: 0.5rem 0;
 }
 
 .product p {
-  margin-bottom: 1rem;
-  color: var(--color-price);
+    color: var(--color-price);
+    margin-bottom: 1rem;
 }
 
 .heart {
-  position: absolute;
-  top: 8px;
-  left: 8px;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-image: url("../../assets/heart.svg");
-  background-repeat: no-repeat;
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
+
+    width: 1.5rem;
+    height: 1.5rem;
+
+    background-image: url("../../assets/heart.svg");
+    background-repeat: none;
 }
 
 .heart:hover {
-  background-image: url("../../assets/heart-full.svg");
+    background-image: url("../../assets/heart-full.svg");
 }
